--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,7 +116,7 @@ jobs:
             ./connect.sh
             helm repo add myriad https://charts.myriad.systems
             helm repo update
-            helm upgrade myriad-api myriad/myriad-api \
+            helm upgrade myriad-claimer myriad/myriad-claimer \
               --install \
               --set-string image.tag=${{ needs.compute-build-info.outputs.sha_short }}-${{ needs.compute-build-info.outputs.date }} \
               --set-string config.appHost=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
@@ -132,7 +132,7 @@ jobs:
               --set-string ingress.hosts[0].host=claimer.dev.myriad.systems \
               --set-string ingress.hosts[0].paths[0].path=/ \
               --set-string ingress.hosts[0].paths[0].pathType=ImplementationSpecific \
-              --set-string ingress.tls[0].secretName=myriad-api-tls \
+              --set-string ingress.tls[0].secretName=myriad-claimer-tls \
               --set-string ingress.tls[0].hosts[0]=claimer.dev.myriad.systems \
               --set autoscaling.enabled=true
-            kubectl rollout status deployment/myriad-api
+            kubectl rollout status deployment/myriad-claimer
