--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,8 +24,8 @@ jobs:
           cache: 'yarn'
       - name: Install dependencies
         run: yarn install
-      - name: Test code
-        run: yarn test
+      - name: Build test
+        run: yarn run build
 
   check-link-markdown:
     runs-on: ubuntu-latest
