--- a/.github/workflows/alpha.yml
+++ b/.github/workflows/alpha.yml
@@ -143,11 +143,11 @@ jobs:
               --install \
               --set-string image.tag=${{ needs.compute-build-info.outputs.latest_tag }} \
               --set-string config.appHost=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
-              --set-string config.port=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
-              --set-string config.gun.user=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
-              --set-string config.gun.pwd=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
-              --set-string config.gun.host=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
-              --set-string config.gun.port=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
+              --set-string config.port=${{ steps.secrets.outputs.CLAIMER_PORT }} \
+              --set-string config.gun.user=${{ steps.secrets.outputs.GUN_USER }} \
+              --set-string config.gun.pwd=${{ steps.secrets.outputs.GUN_PWD }} \
+              --set-string config.gun.host=${{ steps.secrets.outputs.GUN_HOST }} \
+              --set-string config.gun.port=${{ steps.secrets.outputs.GUN_PORT }} \
               --set ingress.enabled=true \
               --set-string ingress.annotations."kubernetes\.io/ingress\.class"=nginx \
               --set-string ingress.annotations."cert-manager\.io/cluster-issuer"=letsencrypt \
