--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,10 +96,10 @@ jobs:
           secrets: |-
             CLAIMER_APP_HOST:${{ secrets.DEV_GCP_PROJECT_ID }}/CLAIMER_APP_HOST
             CLAIMER_PORT:${{ secrets.DEV_GCP_PROJECT_ID }}/CLAIMER_PORT
-            GUN_USER:${{ secrets.DEV_GCP_PROJECT_ID }}/GUN_USER
-            GUN_PWD:${{ secrets.DEV_GCP_PROJECT_ID }}/GUN_PWD
-            GUN_HOST:${{ secrets.DEV_GCP_PROJECT_ID }}/GUN_HOST
-            GUN_PORT:${{ secrets.DEV_GCP_PROJECT_ID }}/GUN_PORT
+            CLAIMER_GUN_USER:${{ secrets.DEV_GCP_PROJECT_ID }}/CLAIMER_GUN_USER
+            CLAIMER_GUN_PWD:${{ secrets.DEV_GCP_PROJECT_ID }}/CLAIMER_GUN_PWD
+            CLAIMER_GUN_HOST:${{ secrets.DEV_GCP_PROJECT_ID }}/CLAIMER_GUN_HOST
+            CLAIMER_GUN_PORT:${{ secrets.DEV_GCP_PROJECT_ID }}/GUN_PORT
             SSH_HOST:${{ secrets.DEV_GCP_PROJECT_ID }}/SSH_HOST
             SSH_USERNAME:${{ secrets.DEV_GCP_PROJECT_ID }}/SSH_USERNAME
             SSH_KEY:${{ secrets.DEV_GCP_PROJECT_ID }}/SSH_KEY
@@ -121,9 +121,9 @@ jobs:
               --set-string image.tag=${{ needs.compute-build-info.outputs.sha_short }}-${{ needs.compute-build-info.outputs.date }} \
               --set-string config.appHost=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
               --set-string config.port=${{ steps.secrets.outputs.CLAIMER_PORT }} \
-              --set-string config.gun.user=${{ steps.secrets.outputs.GUN_USER }} \
-              --set-string config.gun.pwd=${{ steps.secrets.outputs.GUN_PWD }} \
-              --set-string config.gun.host=${{ steps.secrets.outputs.GUN_HOST }} \
+              --set-string config.gun.user=${{ steps.secrets.outputs.CLAIMER_GUN_USER }} \
+              --set-string config.gun.pwd=${{ steps.secrets.outputs.CLAIMER_GUN_PWD }} \
+              --set-string config.gun.host=${{ steps.secrets.outputs.CLAIMER_GUN_HOST }} \
               --set-string config.gun.port=${{ steps.secrets.outputs.GUN_PORT }} \
               --set ingress.enabled=true \
               --set-string ingress.annotations."kubernetes\.io/ingress\.class"=nginx \
