--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,10 +108,10 @@ jobs:
           secrets: |-
             CLAIMER_APP_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_APP_HOST
             CLAIMER_PORT:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_PORT
-            GUN_USER:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_USER
-            GUN_PWD:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_PWD
-            GUN_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_HOST
-            GUN_PORT:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_PORT
+            CLAIMER_GUN_USER:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_USER
+            CLAIMER_GUN_PWD:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_PWD
+            CLAIMER_GUN_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_HOST
+            CLAIMER_GUN_PORT:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_PORT
             SSH_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/SSH_HOST
             SSH_USERNAME:${{ secrets.PROD_GCP_PROJECT_ID }}/SSH_USERNAME
             SSH_KEY:${{ secrets.PROD_GCP_PROJECT_ID }}/SSH_KEY
@@ -133,10 +133,10 @@ jobs:
               --set-string image.tag=${{ needs.compute-build-info.outputs.latest_tag }} \
               --set-string config.appHost=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
               --set-string config.port=${{ steps.secrets.outputs.CLAIMER_PORT }} \
-              --set-string config.gun.user=${{ steps.secrets.outputs.GUN_USER }} \
-              --set-string config.gun.pwd=${{ steps.secrets.outputs.GUN_PWD }} \
-              --set-string config.gun.host=${{ steps.secrets.outputs.GUN_HOST }} \
-              --set-string config.gun.port=${{ steps.secrets.outputs.GUN_PORT }} \
+              --set-string config.gun.user=${{ steps.secrets.outputs.CLAIMER_GUN_USER }} \
+              --set-string config.gun.pwd=${{ steps.secrets.outputs.CLAIMER_GUN_PWD }} \
+              --set-string config.gun.host=${{ steps.secrets.outputs.CLAIMER_GUN_HOST }} \
+              --set-string config.gun.port=${{ steps.secrets.outputs.CLAIMER_GUN_PORT }} \
               --set ingress.enabled=true \
               --set-string ingress.annotations."kubernetes\.io/ingress\.class"=nginx \
               --set-string ingress.annotations."cert-manager\.io/cluster-issuer"=letsencrypt \
@@ -176,10 +176,10 @@ jobs:
           secrets: |-
             CLAIMER_APP_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_APP_HOST
             CLAIMER_PORT:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_PORT
-            GUN_USER:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_USER
-            GUN_PWD:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_PWD
-            GUN_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_HOST
-            GUN_PORT:${{ secrets.PROD_GCP_PROJECT_ID }}/GUN_PORT
+            CLAIMER_GUN_USER:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_USER
+            CLAIMER_GUN_PWD:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_PWD
+            CLAIMER_GUN_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_HOST
+            CLAIMER_GUN_PORT:${{ secrets.PROD_GCP_PROJECT_ID }}/CLAIMER_GUN_PORT
             SSH_HOST:${{ secrets.PROD_GCP_PROJECT_ID }}/SSH_HOST
             SSH_USERNAME:${{ secrets.PROD_GCP_PROJECT_ID }}/SSH_USERNAME
             SSH_KEY:${{ secrets.PROD_GCP_PROJECT_ID }}/SSH_KEY
@@ -201,10 +201,10 @@ jobs:
               --set-string image.tag=${{ needs.compute-build-info.outputs.latest_tag }} \
               --set-string config.appHost=${{ steps.secrets.outputs.CLAIMER_APP_HOST }} \
               --set-string config.port=${{ steps.secrets.outputs.CLAIMER_PORT }} \
-              --set-string config.gun.user=${{ steps.secrets.outputs.GUN_USER }} \
-              --set-string config.gun.pwd=${{ steps.secrets.outputs.GUN_PWD }} \
-              --set-string config.gun.host=${{ steps.secrets.outputs.GUN_HOST }} \
-              --set-string config.gun.port=${{ steps.secrets.outputs.GUN_PORT }} \
+              --set-string config.gun.user=${{ steps.secrets.outputs.CLAIMER_GUN_USER }} \
+              --set-string config.gun.pwd=${{ steps.secrets.outputs.CLAIMER_GUN_PWD }} \
+              --set-string config.gun.host=${{ steps.secrets.outputs.CLAIMER_GUN_HOST }} \
+              --set-string config.gun.port=${{ steps.secrets.outputs.CLAIMER_GUN_PORT }} \
               --set ingress.enabled=true \
               --set-string ingress.annotations."kubernetes\.io/ingress\.class"=nginx \
               --set-string ingress.annotations."cert-manager\.io/cluster-issuer"=letsencrypt \
